Mostrar materias en InscripcionActivity.kt

--- a/app/src/main/res/layout/row_inscripcion.xml
+++ b/app/src/main/res/layout/row_inscripcion.xml
@@ -15,6 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Btn_Inscripcion"></Button>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerRowInscripcion"
         android:layout_width="match_parent"
