--- a/app/src/main/res/layout/row_materias_inscripcion.xml
+++ b/app/src/main/res/layout/row_materias_inscripcion.xml
@@ -36,6 +36,7 @@
         <Button
             android:id="@+id/btnSeleccionarInscripcion"
             android:text="Seleccionar"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
