--- a/app/src/main/res/layout/row_inscripcion.xml
+++ b/app/src/main/res/layout/row_inscripcion.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/tvRowInscripcionSemestre"
+        android:text="Semestre"
         android:textColor="#000"
         android:gravity="center"
         android:background="#ccc"
