Inscripcion Materias posibles a seleccionar, cambio de fondo y datos

--- a/app/src/main/res/layout/row_inscripcion.xml
+++ b/app/src/main/res/layout/row_inscripcion.xml
@@ -8,8 +8,8 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tvRowInscripcionSemestre"
-        android:text="Semestre"
+        android:id="@+id/tvSemInscripcion"
+        android:text=""
         android:textColor="#000"
         android:gravity="center"
         android:background="#ccc"
