--- a/app/src/main/res/layout/row_materias_inscripcion.xml
+++ b/app/src/main/res/layout/row_materias_inscripcion.xml
@@ -33,6 +33,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnSeleccionarMateia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_input_add"
+            card:fabSize="mini"
+            tools:visibility="visible">
+
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
