Falta enviar datos al Horario y cerrar el activiti cuando se termina de inscribir. Validar la cantidad de materias Inscritas.

--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".ScheduleActivity">
 
+    <TextView
+        android:id="@+id/prueba"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Prueba" />
+
     <TableRow
         android:gravity="center"
         android:layout_height="wrap_content"
