--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:id="@+id/editContrasenia"
         android:hint="Ingresa tu contraseña"
         android:layout_margin="15dp"
+        android:inputType="textPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
